# sickbeard_mp4_automator

./: .envrc  .gitignore  manual.py  mkvtomp4.py  pyproject.toml  requirements.txt  setup.cfg
autoprocess/: autoProcessMovie.py
ma/: manual.py  mkvtomp4.py
ma/converter/: avcodecs.py  ffmpeg.py
ma/setup/PostProcess/: main.py
src/ma/: NZBGetPostProcess.py  SABPostProcess.py  autoProcess.ini  delugePostProcess.py  extensions.py  manual.py  mkvtomp4.py  postConversion.py  postCouchPotato.py  postRadarr.py  postSonarr.py  post_processor.py  readSettings.py  tmdb_mp4.py  tvdb_mp4.py  uTorrentPostProcess.py
src/ma/autoprocess/: autoProcessMovie.py  autoProcessTV.py  autoProcessTVSR.py  plex.py  radarr.py  sonarr.py
src/ma/converter/: __init__.py  avcodecs.py  ffmpeg.py  formats.py
src/ma/post_process/: iTunes.py  sample.py
src/ma/setup/PostProcess/: main.py
src/ma/tmdb_api/: tmdb.py
src/ma/tvdb_api/: tvdb_api.py  tvdb_cache.py  tvdb_exceptions.py  tvdb_ui.py
src/mutagen/: _compat.py  _file.py  _util.py  _vorbis.py  aac.py
src/mutagen/mp4/: __init__.py  _as_entry.py  _atom.py
